--- a/components/header.module.css
+++ b/components/header.module.css
@@ -3,14 +3,12 @@
 @media only screen 
   and (min-device-width: 320px) 
   and (max-device-width: 425px) { 
-    .container {
-      max-width: 22rem;
-      padding: 0 1rem;
-      margin: 3rem auto 6rem;
-    }
-    
-    .backToHome {
-      margin: 3rem 0 0;
+    .header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        height: 15rem;
     }
 }
 
@@ -36,14 +34,12 @@
   and (min-device-width: 1200px) 
   and (max-device-width: 1600px) 
   and (-webkit-min-device-pixel-ratio: 1) {
-    .container {
-      max-width: 39rem;
-      padding: 0 1rem;
-      margin: 3rem auto 6rem;
-    }
-    
-    .backToHome {
-      margin: 3rem 0 0;
+    .header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        height: 20rem;
     }
 }
 
@@ -53,14 +49,12 @@
   and (max-device-width: 1600px) 
   and (-webkit-min-device-pixel-ratio: 2)
   and (min-resolution: 192dpi) {
-    .container {
-      max-width: 46rem;
-      padding: 0 1rem;
-      margin: 3rem auto 6rem;
-    }
-    
-    .backToHome {
-      margin: 3rem 0 0;
+    .header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        height: 20rem;
     }
 }
 
@@ -70,14 +64,12 @@
   and (min-device-width: 1024px) 
   and (max-device-width: 1200px) 
   and (-webkit-min-device-pixel-ratio: 1) {
-    .container {
-      max-width: 38rem;
-      padding: 0 1rem;
-      margin: 3rem auto 6rem;
-    }
-    
-    .backToHome {
-      margin: 3rem 0 0;
+    .header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        height: 18rem;
     }
 }
 
@@ -87,14 +79,12 @@
   and (max-device-width: 1200px) 
   and (-webkit-min-device-pixel-ratio: 2)
   and (min-resolution: 192dpi) {
-    .container {
-      max-width: 38rem;
-      padding: 0 1rem;
-      margin: 3rem auto 6rem;
-    }
-    
-    .backToHome {
-      margin: 3rem 0 0;
+    .header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        height: 18rem;
     }
 }
 
@@ -105,15 +95,14 @@
   and (min-device-width: 768px) 
   and (max-device-width: 1023px) 
   and (-webkit-min-device-pixel-ratio: 1) {
-    .container {
-      max-width: 35rem;
-      padding: 0 1rem;
-      margin: 3rem auto 6rem;
+    .header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        height: 18rem;
     }
     
-    .backToHome {
-      margin: 3rem 0 0;
-    }
 }
 
 /* Portrait */
