--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -4,6 +4,7 @@
   font-weight: 800;
   letter-spacing: -0.05rem;
   margin: 1rem 0;
+  text-align: center;
 }
 
 .headingXl {
@@ -50,3 +51,12 @@
 .lightText {
   color: #666;
 }
+
+.justifyContentCenter {
+  justify-content: center;
+}
+
+.textAlignCenter {
+  text-align: center;
+}
+
