--- a/components/home/header.module.css
+++ b/components/home/header.module.css
@@ -1,7 +1,6 @@
 /* ----------- Mobile ----------- */
 /* Portrait and Landscape */
-@media only screen 
-  and (min-device-width: 320px) 
+@media (min-device-width: 320px) 
   and (max-device-width: 425px) { 
     .header {
         display: flex;
@@ -13,16 +12,14 @@
 }
 
 /* Portrait */
-@media only screen 
-  and (min-device-width: 320px) 
+@media (min-device-width: 320px) 
   and (max-device-width: 425px) 
   and (-webkit-min-device-pixel-ratio: 3) { 
 
 }
 
 /* Landscape */
-@media only screen 
-  and (min-device-width: 320px) 
+@media (min-device-width: 320px) 
   and (max-device-width: 425px) 
   and (orientation: landscape) { 
 
@@ -30,8 +27,7 @@
 
 /* ----------- Laptop and Desktop ----------- */
 /* ----------- Non-Retina Screens ----------- */
-@media screen 
-  and (min-device-width: 1200px) 
+@media (min-device-width: 1200px) 
   and (max-device-width: 1600px) 
   and (-webkit-min-device-pixel-ratio: 1) {
     .header {
@@ -44,8 +40,7 @@
 }
 
 /* ----------- Retina Screens ----------- */
-@media screen 
-  and (min-device-width: 1200px) 
+@media (min-device-width: 1200px) 
   and (max-device-width: 1600px) 
   and (-webkit-min-device-pixel-ratio: 2)
   and (min-resolution: 192dpi) {
@@ -60,8 +55,7 @@
 
 /* ----------- Laptop and Desktop ----------- */
 /* ----------- Non-Retina Screens ----------- */
-@media screen 
-  and (min-device-width: 1024px) 
+@media (min-device-width: 1024px) 
   and (max-device-width: 1200px) 
   and (-webkit-min-device-pixel-ratio: 1) {
     .header {
@@ -91,8 +85,7 @@
 /* ----------- Tablet ----------- */
 
 /* Portrait and Landscape */
-@media only screen 
-  and (min-device-width: 768px) 
+@media (min-device-width: 768px) 
   and (max-device-width: 1023px) 
   and (-webkit-min-device-pixel-ratio: 1) {
     .header {
@@ -106,8 +99,7 @@
 }
 
 /* Portrait */
-@media only screen 
-  and (min-device-width: 768px) 
+@media (min-device-width: 768px) 
   and (max-device-width: 1023px) 
   and (orientation: portrait) 
   and (-webkit-min-device-pixel-ratio: 1) {
@@ -115,8 +107,7 @@
 }
 
 /* Landscape */
-@media only screen 
-  and (min-device-width: 768px) 
+@media (min-device-width: 768px) 
   and (max-device-width: 1023px) 
   and (orientation: landscape) 
   and (-webkit-min-device-pixel-ratio: 1) {
